app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    app: app-pod
spec:
  containers:
    - name: snowflake-id-generator
      image: snowflake-id-generator:0.0.1-SNAPSHOT
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      resources:
        requests:
          cpu: "100m"
          memory: "256Mi"
        limits:
          cpu: "500m"
          memory: "512Mi"

  restartPolicy: Always
