postgres-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres # При создании каждого Pod ему назначается DNS-поддомен вида $(podname).$(spec.serviceName)
  replicas: 2
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
            - name: postgres-config-volume
              mountPath: /postgres_config
              readOnly: true
            - name: postgres-secrets-volume
              mountPath: /postgres_secrets
              readOnly: true
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "psql -U $POSTGRES_USER -d $POSTGRES_DB -c 'SELECT 1'"
      volumes:
        - name: postgres-config-volume
          configMap:
            name: postgres-config
        - name: postgres-secrets-volume
          secret:
            secretName: postgres-secrets
  volumeClaimTemplates: # StatefulSet использует volumeClaimTemplates, чтобы каждый Pod получал собственный PersistentVolume
    - metadata:
        name: pgdata
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: hostpath # Необязательно поле, если необходимо отдавать предпочтение объекту StorageClass созданному по умолчанию.
