app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: id-generator-service
  labels:
    app: id-generator-service
spec:
  selector:
    app: id-generator
  ports:
    - port: 8080
      name: http
      targetPort: 8080
      nodePort: 30080
  type: NodePort
