kuard-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  containers:
    - name: kuard
      image: jmutai/kuard-amd64:latest
      imagePullPolicy: IfNotPresent
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 15
        timeoutSeconds: 2
        periodSeconds: 20
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 5
        failureThreshold: 3
        successThreshold: 1
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  selector:
    app: kuard
  ports:
    - port: 8080
      name: http
      targetPort: 8080
      nodePort: 30080
  type: NodePort
