postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres # Обнаружение связанного объекта Pod по его метке
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
#  type: None # Headless Service является обязательным для StatefulSet
