app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: id-generator-ingress
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  tls:
  - hosts:
    - snowflake.dev.local
    secretName: id-generator-tls
  rules:
  - host: snowflake.dev.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: id-generator-service
              port:
                number: 80
